src/app/pages/projects/projects.component.scss
@use './abstracts' as *;

.projects {
    &__grid {
        display: grid;
        gap: 2rem;
        grid-template-columns: repeat(1, minmax(500px, 1fr));
        @media (min-width: 650px) and (max-width: 768px) {
            grid-template-columns: repeat(2, 1fr);
            
        }
        @media (min-width: 0px) and (max-width: 649px) {
            grid-template-columns: 1fr;
        }
    }
     @media (min-width: 0px) and (max-width: 649px) {
            &__section{
                 margin: 0;
                padding: 0;
            }
        }
}

